data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_749.wast
;; 10. **Test Description**: Use a sequence of multiple `br_if` conditions within a loop to create a decision tree. Ensure the loop navigates the tree correctly based on each evaluated condition.    - **Constraint**: Validate conditional branching throughout multiple `br_if` instructions.    - **Incorrect Condition Evaluation**: This test evaluates handling sequences of branch conditions, checking for branching errors due to condition misjudgments.

(assert_invalid
  (module
    (func $nested_br_if_in_loop
      (loop (result i32)
        (i32.const 1)
        (br_if 0 (i32.const 0))
        (br_if 0 (i32.const 0))
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)